# Nuvex

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: graph.py  retrieval_generation.py  tools.py
apps/api/src/api/agents/prompts/: coordinator_agent.yaml  intent_router_agent.yaml  product_qa_agent.yaml  retrieval_generation.yaml  shopping_cart_agent.yaml  warehouse_manager_agent.yaml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/processors/: submit_feedback.py
apps/api/src/api/core/: config.py
apps/chat_ui/: Dockerfile  pyproject.toml
apps/chat_ui/src/chat_studio/: app.py
apps/chat_ui/src/chat_studio/core/: config.py
apps/chat_ui/src/chat_ui/: app.py
apps/items_mcp_server/: pyproject.toml
apps/items_mcp_server/src/items_mcp_server/: utils.py
apps/reviews_mcp_server/: pyproject.toml
apps/reviews_mcp_server/src/reviews_mcp_server/: utils.py
notebook/: 01-explore-amazon-dataset.ipynb  03-RAG-pipeline.ipynb  04-evaluation-dataset.ipynb  05-RAG-Evals.ipynb  06-Structured-Outputs-Intro.ipynb  07-Structured-Outputs-RAG-pipeline.ipynb  08-Hybrid-Search.ipynb  09-Reranking.ipynb  10-Prompt-Versioning.ipynb  11-LangGraph-Intro.ipynb  12-Query-Rewriting.ipynb  13-Router.ipynb  14-Agent-Single-Turn.ipynb  15-Multi-Turn-Agent.ipynb  16-Multiple-Tools.ipynb  17-Human-Feedback.ipynb  18-MCP.ipynb  19-Streaming-State.ipynb  20-Shopping-Cart-Agent-Tools.ipynb  21-Shopping-Cart-Agent.ipynb  22-Coordinator-Agent.ipynb  23-Warehouse-Agent-Database.ipynb  24-Warehouse-Agent-Tools.ipynb  25-Warehouse-Manager-Agent.ipynb  RAG-Evals.ipynb  RAG-pipeline.ipynb  RAG-preprocessing-Amazon.ipynb  evaluation-dataset.ipynb  explore-amazon-dataset.ipynb
notebook/utils/: tools.py
scripts/sql/: shopping_cart_table.sql  warehouse_management.sql
