[project]
name = "api"
version = "0.1.0"
description = "Shopping Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.57.0",
    "groq>=1.0.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "qdrant-client>=1.9.0",
    "langsmith>=0.1.0",
    "instructor>=1.0.0",
    "numpy>=1.26.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "fastembed>=0.7.4",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres",  
    "fastmcp",                          
    "tiktoken",  
    "psycopg-binary>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "cohere>=5.20.1",                      
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
]
